# localdocsmd

./: .gitignore  CMakeLists.txt  README.md  config.ini
.context/: collab-ot.md  document-view.md
include/: auth.h  backup.h  collab.h  config.h  database.h  localdocsmd.h  markdown.h  presign.h  project.h  rbac.h  routes.h  server.h  session.h  template.h  utils.h  workspace.h
src/: auth.c  backup.c  collab.c  config.c  database.c  main.c  markdown.c  presign.c  project.c  rbac.c  routes.c  server.c  session.c  template.c  utils.c  workspace.c
web/: help.html
web/css/: example.css  styles.css
web/js/: app.js  backgrounds.js  themes.js
web/templates/: admin.html  dashboard.html  document.html  editor.html  layout.html  login.html  project.html  search.html  workspace.html
